--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.datasource.url=jdbc:mysql://s29oj5odr85rij2o.cbetxkdyhwsb.us-east-1.rds.a
 spring.datasource.username=nnmm0t5e912xrzfn
 spring.datasource.password=h5fjsgx37p3a0iig
 
+# 민수 RDS
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://c8u4r7fp8i8qaniw.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/iazgt51emgaxyw1b?serverTimeZone=UTC&CharacterEncoding=UTF-8
+#spring.datasource.username=s1cga2p3vdijv3in
+#spring.datasource.password=wlc4oasrckok0a81
+
