--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency> 
+		   <groupId>com.google.zxing</groupId> 
+		   <artifactId>javase</artifactId> 
+		   <version>3.4.0</version> 
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
     		<groupId>org.json</groupId>
     		<artifactId>json</artifactId>
     		<version>20210307</version>
-		</dependency>	
+		</dependency>
 	</dependencies>
 
 	<build>
