--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # 민균 RDS
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://s29oj5odr85rij2o.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/b3xc9f8668wfxy44?serverTimeZone=UTC&CharacterEncoding=UTF-8
-#spring.datasource.username=nay6442zap47finu
-#spring.datasource.password=ho348k6xjp1pieg5
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://s29oj5odr85rij2o.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/b3xc9f8668wfxy44?serverTimeZone=UTC&CharacterEncoding=UTF-8
+spring.datasource.username=nay6442zap47finu
+spring.datasource.password=ho348k6xjp1pieg5
 
 # 재욱 RDS
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,8 +14,8 @@ spring.mvc.view.suffix=.jsp
 #spring.datasource.password=h5fjsgx37p3a0iig
 
 # 민수 RDS
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://c8u4r7fp8i8qaniw.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/iazgt51emgaxyw1b?serverTimeZone=UTC&CharacterEncoding=UTF-8
-spring.datasource.username=s1cga2p3vdijv3in
-spring.datasource.password=me01mo2rhi7cspv3
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://c8u4r7fp8i8qaniw.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/iazgt51emgaxyw1b?serverTimeZone=UTC&CharacterEncoding=UTF-8
+#spring.datasource.username=s1cga2p3vdijv3in
+#spring.datasource.password=me01mo2rhi7cspv3
 
