--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mvc.view.suffix=.jsp
 
 # 민균 RDS
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://s29oj5odr85rij2o.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/w9yxtl9077zgb21i?serverTimeZone=UTC&CharacterEncoding=UTF-8
-spring.datasource.username=p7p9dz5pkxftf0jb
-spring.datasource.password=u4eugs0qpknnsq2e
+spring.datasource.url=jdbc:mysql://j8oay8teq9xaycnm.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/er8gppegli96x0ri?serverTimeZone=UTC&CharacterEncoding=UTF-8
+spring.datasource.username=tkd1ugjvphg0zzhs
+spring.datasource.password=pcxw0uenya7fo2is
 
 # 재욱 RDS
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
