--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,16 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # 민균 RDS
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://j8oay8teq9xaycnm.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/er8gppegli96x0ri?serverTimeZone=UTC&CharacterEncoding=UTF-8
-spring.datasource.username=tkd1ugjvphg0zzhs
-spring.datasource.password=pcxw0uenya7fo2is
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://j8oay8teq9xaycnm.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/er8gppegli96x0ri?serverTimeZone=UTC&CharacterEncoding=UTF-8
+#spring.datasource.username=tkd1ugjvphg0zzhs
+#spring.datasource.password=pcxw0uenya7fo2is
 
 # 재욱 RDS
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://s29oj5odr85rij2o.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/i0wri2q43uzzhj0g?serverTimeZone=UTC&CharacterEncoding=UTF-8
-#spring.datasource.username=nnmm0t5e912xrzfn
-#spring.datasource.password=h5fjsgx37p3a0iig
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://s29oj5odr85rij2o.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/i0wri2q43uzzhj0g?serverTimeZone=UTC&CharacterEncoding=UTF-8
+spring.datasource.username=nnmm0t5e912xrzfn
+spring.datasource.password=h5fjsgx37p3a0iig
 
 # 민수 RDS
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
